# KeyAuth

./: .env.example  .gitignore  IMPLEMENTATION.md  Schema.md  collect_samples.html  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  debug_features.py  pyproject.toml  test_auth.py  test_verification.html  test_with_samples.py
backend/: auth.py  database.py  email.py  main.py  models.py  schemas.py
backend/ml/: __init__.py  feature_extractor.py  model_parameters.txt  phrases.txt  predict.py  train_model.py
backend/ml/models/: user_1.pkl
backend/routes/: auth_routes.py  otp_routes.py  typing_routes.py
backend/samples/: typing_samples_1772832223091.json
extension/: background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  register.html  register.js  style.css  warning.html
frontend/: dashboard.html  login.html  register.html  style.css  success.html  train.html  typing.html  typing.js
