[project]
name = "keyauth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib>=3.0.0",
    "aiosqlite>=0.22.1",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "python-dotenv>=1.0.0",
    "ruff>=0.15.5",
    "scikit-learn>=1.8.0",
    "tortoise-orm>=1.1.6",
    "uvicorn>=0.41.0",
]
